{
  "version": 4,
  "terraform_version": "0.12.3",
  "serial": 21,
  "lineage": "f90d6932-e044-1f57-8ba5-8ba39c83d4fb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "user06_default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_network_acl_id": "acl-0f3d24bd6d885192c",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0f3d24bd6d885192c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "715652651898",
            "subnet_ids": [
              "subnet-03b129088d69aee2b",
              "subnet-0f9d86262ab08886b"
            ],
            "tags": {},
            "vpc_id": "vpc-0db238bfda2a7be88"
          },
          "depends_on": [
            "aws_subnet.public_1a",
            "aws_subnet.public_1c",
            "aws_vpc.user06VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "user06_default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:715652651898:security-group/sg-0835efb33762ae4d2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0835efb33762ae4d2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "default",
            "owner_id": "715652651898",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0db238bfda2a7be88"
          },
          "depends_on": [
            "aws_vpc.user06VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "user06_vm1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-4af5022c",
            "arn": "arn:aws:ec2:ap-northeast-1:715652651898:instance/i-08ddefcc5898c6304",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-08ddefcc5898c6304",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "2dal-user06",
            "monitoring": false,
            "primary_network_interface_id": "eni-0d6f84a842973b922",
            "private_dns": "ip-106-0-1-139.ap-northeast-1.compute.internal",
            "private_ip": "106.0.1.139",
            "public_dns": "ec2-52-195-4-79.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.195.4.79",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-02b749fc43057cbef",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f9d86262ab08886b",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0835efb33762ae4d2"
            ]
          },
          "depends_on": [
            "aws_default_security_group.user06_default",
            "aws_subnet.public_1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "user06_vm2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-4af5022c",
            "arn": "arn:aws:ec2:ap-northeast-1:715652651898:instance/i-0658b37eda7b701c1",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0658b37eda7b701c1",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "2dal-user06",
            "monitoring": false,
            "primary_network_interface_id": "eni-0f70c845cf0dc6fc8",
            "private_dns": "ip-106-0-3-27.ap-northeast-1.compute.internal",
            "private_ip": "106.0.3.27",
            "public_dns": "ec2-54-95-66-139.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.95.66.139",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "iops": 100,
                "volume_id": "vol-07622d40a752017f5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03b129088d69aee2b",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0835efb33762ae4d2"
            ]
          },
          "depends_on": [
            "aws_default_security_group.user06_default",
            "aws_subnet.public_1c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "user06igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0f43f320ea9fdf6e2",
            "owner_id": "715652651898",
            "vpc_id": "vpc-0db238bfda2a7be88"
          },
          "depends_on": [
            "aws_vpc.user06VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "user06rt_public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-06daa5033f1bc75f4",
            "owner_id": "715652651898",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f43f320ea9fdf6e2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "vpc_id": "vpc-0db238bfda2a7be88"
          },
          "depends_on": [
            "aws_internet_gateway.user06igw",
            "aws_vpc.user06VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "user06_public_1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094730b38af06ad65",
            "route_table_id": "rtb-06daa5033f1bc75f4",
            "subnet_id": "subnet-0f9d86262ab08886b"
          },
          "depends_on": [
            "aws_route_table.user06rt_public",
            "aws_subnet.public_1a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "user06_public_1c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0322b69df1407e480",
            "route_table_id": "rtb-06daa5033f1bc75f4",
            "subnet_id": "subnet-03b129088d69aee2b"
          },
          "depends_on": [
            "aws_route_table.user06rt_public",
            "aws_subnet.public_1c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:715652651898:subnet/subnet-0f9d86262ab08886b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "106.0.1.0/24",
            "id": "subnet-0f9d86262ab08886b",
            "map_public_ip_on_launch": false,
            "owner_id": "715652651898",
            "vpc_id": "vpc-0db238bfda2a7be88"
          },
          "depends_on": [
            "aws_vpc.user06VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1c",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:715652651898:subnet/subnet-03b129088d69aee2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "106.0.3.0/24",
            "id": "subnet-03b129088d69aee2b",
            "map_public_ip_on_launch": false,
            "owner_id": "715652651898",
            "vpc_id": "vpc-0db238bfda2a7be88"
          },
          "depends_on": [
            "aws_vpc.user06VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "user06VPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:715652651898:vpc/vpc-0db238bfda2a7be88",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "106.0.0.0/16",
            "default_network_acl_id": "acl-0f3d24bd6d885192c",
            "default_route_table_id": "rtb-015246f0e600da144",
            "default_security_group_id": "sg-0835efb33762ae4d2",
            "dhcp_options_id": "dopt-0d9c2be86ee4efa1b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0db238bfda2a7be88",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-015246f0e600da144",
            "owner_id": "715652651898"
          }
        }
      ]
    }
  ]
}